fix(header.css): remove width stretch to fix image logo in safari

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -7,7 +7,6 @@
   padding: 1rem;
   width: -moz-available;
   width: 100%;
-  width: stretch;
 }
 
 .infinite-logo {
